--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,6 +17,9 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+      
+assignees:
+  - ioveracker
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
