--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,14 +2,14 @@ owner: alchemyrpg
 repo: upptime
 
 sites:
-  - name: Alchemy RPG - App
+  - name: App
     url: https://app.alchemyrpg.com
-  - name: Alchemy RPG - Marketing Site
+  - name: Marketing Site
     url: https://alchemyrpg.com  
 
 status-website:
   cname: status.alchemyrpg.com
-  # baseUrl: /your-repo-name
+  baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
