--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,10 +10,8 @@ sites:
 status-website:
   cname: status.alchemyrpg.com
   baseUrl: /upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://app.alchemyrpg.com/favicon-512.png
+  name: Alchemy Status
   navbar:
     - title: Status
       href: /
