Switch to dark theme 😎

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,6 +11,7 @@ status-website:
   cname: status.alchemyrpg.com
   baseUrl: /upptime
   logoUrl: https://app.alchemyrpg.com/favicon-120.png
+  theme: dark
   name: Alchemy Status
   navbar:
     - title: Status
