Add workflowSchedule (still at defaults)

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -31,6 +31,16 @@ status-website:
       
 assignees:
   - ioveracker
+ 
+# https://crontab.guru 
+workflowSchedule:
+  graphs: "0 0 * * *"
+  responseTime: "0 23 * * *"
+  staticSite: "0 1 * * *"
+  summary: "0 0 * * *"
+  updateTemplate: "0 0 * * *"
+  updates: "0 3 * * *"
+  uptime: "*/5 * * * *"
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
