--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -25,7 +25,7 @@ sites:
 status-website:
   cname: status.alchemyrpg.com
   logoUrl: https://app.alchemyrpg.com/favicon-120.png
-  favicon: https://app.alchemyrpg.com/favicon-120.png
+  icon: https://app.alchemyrpg.com/favicon-120.png
   theme: night
   name: Alchemy Status
   navbar:
