Add legacy endpoints again

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,21 +2,31 @@ owner: alchemyrpg
 repo: upptime
 
 sites:
-  - name: App
-    url: https://app.alchemyrpg.com
-    icon: https://app.alchemyrpg.com/favicon-120.png
-  - name: API
-    url: $SERVICE_GRAPHQL
-    icon: https://app.alchemyrpg.com/favicon-120.png    
-  - name: RTC API
-    url: $SERVICE_JOURNAL
-    icon: https://app.alchemyrpg.com/favicon-120.png
-  - name: Marketing Site
-    url: https://alchemyrpg.com
-    icon: https://app.alchemyrpg.com/favicon-120.png
-  - name: Developer Documentation
-    url: https://alchemyrpg.github.io/slate
-    icon: https://app.alchemyrpg.com/favicon-120.png
+   - name: App
+     url: https://app.alchemyrpg.com
+     icon: https://app.alchemyrpg.com/favicon-120.png
+   - name: RTC API
+     url: $SERVICE_JOURNAL_2
+   - name: Journal API
+     url: $SERVICE_JOURNAL
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: Gameplay API
+     url: $SERVICE_GRAPHQL
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: Universe API
+     url: $SERVICE_UNIVERSE
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: Marketplace API
+     url: $SERVICE_MARKETPLACE
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: Notes API
+     url: $SERVICE_NOTES
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: Analytics API
+     url: $SERVICE_ANALYTICS
+     icon: https://app.alchemyrpg.com/favicon-120.png
+   - name: Marketing Site
+     url: https://alchemyrpg.com
 
 status-website:
   cname: status.alchemyrpg.com
