--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,7 @@ sites:
      icon: https://app.alchemyrpg.com/favicon-120.png
    - name: RTC API
      url: $SERVICE_JOURNAL_2
+     icon: https://app.alchemyrpg.com/favicon-120.png
    - name: Journal API
      url: $SERVICE_JOURNAL
      icon: https://app.alchemyrpg.com/favicon-120.png    
