--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,26 +11,27 @@ sites:
    - name: API
      url: https://api2.alchemyrpg.com/health
      icon: https://app.alchemyrpg.com/favicon-120.png
-   - name: LEGACY Journal API
-     url: $SERVICE_JOURNAL
-     icon: https://app.alchemyrpg.com/favicon-120.png    
-   - name: LEGACY Gameplay API
-     url: $SERVICE_GRAPHQL
-     icon: https://app.alchemyrpg.com/favicon-120.png    
-   - name: LEGACY Universe API
-     url: $SERVICE_UNIVERSE
-     icon: https://app.alchemyrpg.com/favicon-120.png    
-   - name: LEGACY Marketplace API
-     url: $SERVICE_MARKETPLACE
-     icon: https://app.alchemyrpg.com/favicon-120.png    
-   - name: LEGACY Notes API
-     url: $SERVICE_NOTES
-     icon: https://app.alchemyrpg.com/favicon-120.png    
-   - name: LEGACY Analytics API
-     url: $SERVICE_ANALYTICS
-     icon: https://app.alchemyrpg.com/favicon-120.png
    - name: Marketing Site
      url: https://alchemyrpg.com
+     icon: https://app.alchemyrpg.com/favicon-120.png
+   - name: SUNSET Journal API
+     url: $SERVICE_JOURNAL
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: SUNSET Gameplay API
+     url: $SERVICE_GRAPHQL
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: SUNSET Universe API
+     url: $SERVICE_UNIVERSE
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: SUNSET Marketplace API
+     url: $SERVICE_MARKETPLACE
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: SUNSET Notes API
+     url: $SERVICE_NOTES
+     icon: https://app.alchemyrpg.com/favicon-120.png    
+   - name: SUNSET Analytics API
+     url: $SERVICE_ANALYTICS
+     icon: https://app.alchemyrpg.com/favicon-120.png
 
 status-website:
   cname: status.alchemyrpg.com
