Rename and reorder

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,11 +5,11 @@ sites:
    - name: App
      url: https://app.alchemyrpg.com
      icon: https://app.alchemyrpg.com/favicon-120.png
+   - name: GraphQL API
+     url: https://api2.alchemyrpg.com/health
+     icon: https://app.alchemyrpg.com/favicon-120.png
    - name: RTC API
      url: https://journal2.alchemyrpg.com/health
-     icon: https://app.alchemyrpg.com/favicon-120.png
-   - name: API
-     url: https://api2.alchemyrpg.com/health
      icon: https://app.alchemyrpg.com/favicon-120.png
    - name: Marketing Site
      url: https://alchemyrpg.com
